
2018-11-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: fix listing issues when source is suppressed like printed
	  headers without data and missing output of errors
	* flag.def: renamed new listing options according to NEWS and docs
	* parser.y: msgid change "runtime elements" instead of unclear "sources"

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_tree_category): correct category for reference-modified
	  NATIONAL/NATIONAL-EDITED items

2018-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l, pparse.y: FR #344 Support copybook and library names
	  as text-names (not literals) with periods, always upper-cased
	  if not requested otherwise by FOLD-CALL=LOWER

2018-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c [__ORANGEC__]: adjustments of command line options

2018-10-24  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: minor refactoring (creating ppecho_direct) and comments

2018-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c (cb_list_registers): output "ADRESS OF" as "phrase"

2018-10-13  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (create_implicit_picture): handle case where f->screen_from or
	  f->screen_to are error nodes.
	* parser.y (screen_description): prevent double free of level-number
	  field in error handling.
	* parser.y (perform_body): fixed internal error with empty PERFORM.

2018-10-12  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed TITLE being consumed as statement when actually starting
	  a user defined word

2018-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: warn about unimplemented OPEN REVERSED / WITH NO REWIND,
	  see FR #343
	* parser.y: RM/COBOL compatibility - allow LOCK clause on
	  OPEN REVERSED / WITH NO REWIND

2018-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_environment, cb_validate_program_data,
	  cb_validate_program_body): only use the specified parameter
	  cb_program prog instead of current_program